# fashion_site

./: .~lock.Устав команды.odt#  CNAME  Dockerfile  README.md  alembic.ini  docker-compose.yaml  index.html  manage.py  pyproject.toml  requirements.txt  ~$нтрольные вопросы ПЗ2.docx  Контрольные вопросы ПЗ1.docx  Контрольные вопросы ПЗ2.docx  Отчет по выполненной работе 4.pptx  Презентация ПЗ1.pptx  Презентация ПЗ2.pptx  Рабочая тетрадь.xlsx  Устав команды.odt
alembic/: env.py
alembic/versions/: 4ddb4cd1c71c_create_table_items.py  c784ccddead3_create_table_items.py
app/: main.py
app/api/: items.py
app/core/: config.py
app/crud/: items.py
app/db/: base.py
app/models/: items.py
app/schemas/: items.py
shop/: admin.py  context_processors.py  models.py  urls.py  views.py
shop/management/commands/: bootstrap.py
shop/migrations/: 0001_initial.py  0002_item_is_available_item_slug_alter_item_image_and_more.py
static/css/: about.css  cart.css  catalog.css  checkout.css  main.css
static/js/: main.js
templates/: about.html  base.html  cart.html  checkout.html  home.html  items_list.html
yourbeauty/: asgi.py  settings.py  urls.py  wsgi.py
