[tool.poetry]
name = "your-beauty"
version = "0.1.0"
description = ""
authors = ["xseniaKri <kseniaenta@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.116.1"}
sqlalchemy = "^2.0.43"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
alembic = "^1.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
